--- a/Chess(Console)/Chess(Console).vcxproj
+++ b/Chess(Console)/Chess(Console).vcxproj
@@ -121,13 +121,13 @@
   <ItemGroup>
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Pices.cpp" />
+    <ClCompile Include="Pieces.cpp" />
     <ClCompile Include="UInterface.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h" />
     <ClInclude Include="Header.h" />
-    <ClInclude Include="Pices.h" />
+    <ClInclude Include="Pieces.h" />
     <ClInclude Include="UInterface.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
